--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,11 @@ body {
 .gamecontainer {
     display:flex;
     flex-direction: column;
-    margin:128px;
+    margin:64px;
     min-width: 400px;
     justify-content: center;
+    border: solid 1px gray;
+    border-radius:24px;
      
 }
 
@@ -22,10 +24,11 @@ body {
 
 .scoreholder{
     display: flex;
-
     justify-content: space-between;
     margin:8px;
     padding:8px;
+    border:1px solid gray;
+    border-radius:8px;
 }
 
 .roundnum {
@@ -37,6 +40,9 @@ body {
     flex-direction: column;
     align-items:center;
     padding:24px;
+    border: 1px solid gray;
+    margin:16px;
+    border-radius: 16px;
 }
 
 .vs-message, .who-won {
@@ -46,7 +52,6 @@ body {
 .cardholder {
     display: flex;
     justify-content: space-evenly;
-    border: solid black 1px;
     padding: 32px;
 }
 
@@ -58,7 +63,8 @@ body {
     border-radius: 8px;
 }
 
+/*
 div {
-    border: solid gray 1px;
+    //border: solid gray 1px;
 
-}
+}*/
