--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     display:flex;
     flex-direction: column;
     margin:64px;
-    min-width: 400px;
+    min-width: 500px;
     justify-content: center;
     border: solid 1px gray;
     border-radius:24px;
@@ -43,6 +43,8 @@ body {
     border: 1px solid gray;
     margin:16px;
     border-radius: 16px;
+    min-height: 112px;
+    justify-content: space-evenly;
 }
 
 .vs-message, .who-won {
