--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 .gamecontainer {
     display:flex;
     flex-direction: column;
-    margin:64px;
+    margin:24px;
     min-width: 500px;
     justify-content: center;
     border: solid 1px gray;
@@ -19,13 +19,12 @@ body {
 .titlecard {
     display:flex;
     justify-content: center;
-    padding:32px;
 }
 
 .scoreholder{
     display: flex;
     justify-content: space-between;
-    margin:8px;
+    margin:8px 24px;
     padding:8px;
     border:1px solid gray;
     border-radius:8px;
@@ -41,9 +40,9 @@ body {
     align-items:center;
     padding:24px;
     border: 1px solid gray;
-    margin:16px;
+    margin:16px 28px;
     border-radius: 16px;
-    min-height: 112px;
+    min-height: 116px;
     justify-content: space-evenly;
 }
 
@@ -60,9 +59,29 @@ body {
 .card {
     display:flex;
     padding:8px;
-    border: solid black 1px;
+    border: solid white 1px;
     min-width:80px;
     border-radius: 8px;
+}
+
+.card#rock {
+    background-color:#83769C;
+}
+
+.card#paper {
+    background-color: #ffa300;
+}
+
+.card#scissors {
+    background-color: #ff77a8
+}
+
+.card img {
+    width:60px;
+}
+
+footer {
+    font-size:12px;
 }
 
 /*
