--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,14 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size:larger;
 }
 
 .gamecontainer {
     display:flex;
     flex-direction: column;
-    margin:24px;
-    min-width: 500px;
+    margin:64px 0px 64px 0px;
+    min-width: 600px;
     justify-content: center;
     border: solid 1px gray;
     border-radius:24px;
@@ -25,7 +26,7 @@ body {
     display: flex;
     justify-content: space-between;
     margin:8px 24px;
-    padding:8px;
+    padding:16px;
     border:1px solid gray;
     border-radius:8px;
 }
@@ -81,7 +82,7 @@ body {
 }
 
 footer {
-    font-size:12px;
+    font-size:16px;
 }
 
 .card:hover{
